--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/stack": "^5.9.0",
     "accordion-collapse-react-native": "^0.3.2",
     "apisauce": "^1.1.2",
+    "date-fns": "^2.16.1",
     "expo": "^38.0.9",
     "expo-status-bar": "^1.0.2",
+    "moment": "^2.27.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
@@ -29,7 +31,8 @@
     "react-native-table-component": "^1.2.1",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "xdate": "^0.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
