--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "dependencies": {
     "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/admob": "^7.6.5",
+    "@react-native-firebase/app": "^8.4.3",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "accordion-collapse-react-native": "^0.3.2",
     "apisauce": "^1.1.2",
     "date-fns": "^2.16.1",
-    "expo": "^38.0.9",
+    "expo": "38.0.0",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.27.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-chart-kit": "^6.6.1",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
@@ -34,6 +36,7 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
+    "redux-persist": "^5.10.0",
     "xdate": "^0.8.2"
   },
   "devDependencies": {
