added admob in aboutus

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "covid-tracker",
+    "name": "COVID Tracker",
     "slug": "covid-tracker",
     "version": "1.0.0",
     "orientation": "portrait",
